--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,7 +34,7 @@ h3 {
   display: flex;
   height: 100vh;
   background: linear-gradient(to top, rgba(black, 0.4), rgba(whitesmoke, 0.1)),
-    url("./../resized_images/hero.webp") center/cover
+    url("./assets/media/resized_images/hero.webp") center/cover
       no-repeat;
   color: v.$bright-text;
   justify-content: space-evenly;
